# ProjectAnima

./: .env.example  .gitignore  .gitmodules  .mcp.json  AGENTS.md  ANIMA.md  CLAUDE.md  DISCUSSIONS.md  GLOSSARY.md  IDEAS.md  Makefile  ORIGIN.md  README.md  TODO.md  actors-faculties.md  lib.sh  prompt.txt  pyproject.toml  start.sh  stop.sh
.codesight/: CODESIGHT.md  config.md  graph.md  libs.md
admin_portal/: README.md  requirements.txt  server.py  start.sh  stop.sh
anima/: __init__.py  cli.py  container.py  settings.py
audio_client/: README.md  capture.py  requirements-tts.txt  requirements.txt  speak.py
clients/: README.md
context/: 2026-04-05-1350-note-to-next.md  2026-04-05-1955-note-to-next.md  2026-04-05-2300-note-to-next.md  2026-04-06-0000-note-to-next.md  2026-04-06-1046-note-to-next.md  2026-04-06-1307-note-to-next.md  2026-04-06-1444-note-to-next.md  2026-04-06-2255-note-to-next.md  2026-04-06-note-to-next.md  2026-04-07-0138-note-to-next.md  2026-04-07-2130-note-to-next.md  2026-04-16-1639-note-to-next.md  2026-04-17-0009-note-to-next.md  2026-04-17-0134-note-to-next.md  2026-04-17-0157-note-to-next.md  2026-04-17-0715-note-to-next.md  2026-04-17-0956-note-to-next.md  2026-04-17-1136-note-to-next.md  README.md  next-prompt.txt  note-to-next-instance.md  review-notes.md  session.md  snagging.md
foundation/: ETHICS.md  distress-response.md  identity-initial.md
logs/: .pids
notes/: 2026-04-05-review-notes.md  2026-04-07-claude-code-review.md  2026-04-18-anima-full-build-overnight-convo.txt  DISCUSSIONS.md  IDEAS.md  discord-disclosure.md  (+2 more)
(+165 files in other folders)
